--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
                         Did you know a bird can run up to 65mph? And a cat can jump 26 feet in the air to catch prey?
                         Animals are so cool.
                         <br>
-                        Check out more animal facts There are so many facts to learn.
+                        <a class="animal-link" href="https://www.linkedin.com/in/steven-shannon-03aa8b59/" data-toggle="tooltip"
+                            title="Animal Facts">Check out more animal facts.</a>
+                        There are so many facts to learn.
                     </p>
                     <div class="row">
                         <div class="col-sm-2">
@@ -147,7 +149,34 @@
             Net net mobile friendly. Synergize productive mindfulness bench mark, loop back. Quick win synergize
             productive mindfulness nor hit the ground running yet when does this sunset?
         </p>
-
+        <br>
+        <div class="row">
+            <hr style="border: 4px solid blue;" />
+            <div class="col-sm-4">
+                <h2>List of things</h2>
+                <li>Thing 1</li>
+                <li>Another thing</li>
+                <li>THE thing</li>
+                <li>Thingamabob</li>
+                <li>Thingles</li>
+            </div>
+            <div class="col-sm-4">
+                <h2>Have you heard</h2>
+                <p>There was a duck at a store.</p>
+                <p>He ate for free. I should have ordered him more expensive food!</p>
+                <p>The lesson here is DUCKS EAT FOR FREE at that restaurant.</p>
+            </div>
+            <div class="col-sm-4">
+                <h2>Picture of some things</h2>
+                <div class="col-sm-6">
+                    <img class="card-img-top" src="things.jpg" width="100%" height="100%" alt="Things">
+                </div>
+                <div class="col-sm-6">
+                    <p>These guys are pretty coo’. Thing one and thing 2. You'll like what they do. Such fun from so
+                        few!</p>
+                </div>
+            </div>
+        </div>
     </div>
 
 
@@ -155,7 +184,8 @@
     <footer class="text-center">
         <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
             <span class="glyphicon glyphicon-chevron-up"></span>
-        </a><br><br>
+        </a>
+        <br><br>
         <p>This coding challenge was completed by <a href="https://www.linkedin.com/in/steven-shannon-03aa8b59/"
                 data-toggle="tooltip" title="Steve Shannon">Steve Shannon</a></p>
     </footer>
