code for charlotte work

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- above fonts are from my base, below fonts are ones they told me to use -->
     <link href="https://fonts.googleapis.com/css?family=Passion+One:400,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-
+    <!-- css -->
     <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
@@ -61,72 +61,55 @@
     <div id="tour" class="bg-1">
         <div class="container">
             <div class="container2">
-                <div class="row">
-                    <h3 class="text-left">These are cards</h3>
-                    <p class="text-left">
-                        These cards are cool & tell you things about animals!
-                        Did you know a bird can run up to 65mph? And a cat can jump 26 feet in the air to catch prey?
-                        Animals are so cool.
-                        <br>
-                        <a class="animal-link" href="https://www.linkedin.com/in/steven-shannon-03aa8b59/" data-toggle="tooltip"
-                            title="Animal Facts">Check out more animal facts.</a>
-                        There are so many facts to learn.
-                    </p>
+                <div class="container">
                     <div class="row">
-                        <div class="col-sm-2">
-                            <div class="card">
-                                <img class="card-img-top" src="cat.png" width="100%" height="150px" alt="Cat">
+                        <div class="card-deck">
+                            <div class="card col-lg-3">
+                                <img src="..." class="card-img-top" alt="..." />
                                 <div class="card-body">
-                                    <h5 class="card-title">This is Card 1</h5>
-                                    <p class="card-text">Cats use thier whiskers to determine space between objects in
-                                        the dark.</p>
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">
+                                        Some quick example text to build on the card title and make up
+                                        the bulk of the card's content.
+                                    </p>
+                                    <a href="#" class="btn btn-primary">Go somewhere</a>
                                 </div>
-                                <div class="card-bottom"><a href="https://www.linkedin.com/in/steven-shannon-03aa8b59/"
-                                        class="btn">Click & go!</a></div>
                             </div>
-                        </div>
-                        <div class="col-sm-1"></div>
-                        <div class="col-sm-2">
-                            <div class="card">
-                                <img class="card-img-top" src="birds.png" width="100%" height="150px" alt="Bird">
+                            <div class="card col-lg-3">
+                                <img src="..." class="card-img-top" alt="..." />
                                 <div class="card-body">
-                                    <h5 class="card-title">This is Card 2</h5>
-                                    <p class="card-text">Some birds have membranes that cover their eyes like goggles,
-                                        enabling them to see while traveling at high speeds.</p>
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">
+                                        Some quick example text to build on the card title and make up
+                                        the bulk of the card's content.
+                                    </p>
+                                    <a href="#" class="btn btn-primary">Go somewhere</a>
                                 </div>
-                                <div class="card-bottom"><a href="https://www.linkedin.com/in/steven-shannon-03aa8b59/"
-                                        class="btn">Click & go!</a></div>
                             </div>
-                        </div>
-                        <div class="col-sm-1"></div>
-                        <div class="col-sm-2">
-
-                            <div class="card">
-                                <img class="card-img-top" src="cat.png" width="100%" height="150px" alt="Cat">
+                            <div class="card col-lg-3">
+                                <img src="..." class="card-img-top" alt="..." />
                                 <div class="card-body">
-                                    <h5 class="card-title">This is Card 3</h5>
-                                    <p class="card-text">The cheetah is the only cat that can't retract its claws.</p>
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">
+                                        Some quick example text to build on the card title and make up
+                                        the bulk of the card's content.
+                                    </p>
+                                    <a href="#" class="btn btn-primary">Go somewhere</a>
                                 </div>
-                                <div class="card-bottom"><a href="https://www.linkedin.com/in/steven-shannon-03aa8b59/"
-                                        class="btn">Click & go!</a></div>
                             </div>
-                        </div>
-                        <div class="col-sm-1"></div>
-                        <div class="col-sm-2">
-                            <div class="card">
-                                <img class="card-img-top" src="birds.png" width="100%" height="150px" alt="Bird">
+                            <div class="card col-lg-3">
+                                <img src="..." class="card-img-top" alt="..." />
                                 <div class="card-body">
-                                    <h5 class="card-title">This is Card 4</h5>
-                                    <p class="card-text">Peregrine falcons can fly up to and sometimes surpassing 200mph
-                                        as
-                                        they hunt prey.</p>
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">
+                                        Some quick example text to build on the card title and make up
+                                        the bulk of the card's content.
+                                    </p>
+                                    <a href="#" class="btn btn-primary">Go somewhere</a>
                                 </div>
-                                <div class="card-bottom"><a href="https://www.linkedin.com/in/steven-shannon-03aa8b59/"
-                                        class="btn">Click & go!</a></div>
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -151,8 +134,8 @@
         </p>
         <br>
         <div class="row">
-            <hr style="border: 4px solid blue;" />
             <div class="col-sm-4">
+                    <hr style="border: 4px solid #137595" />
                 <h2>List of things</h2>
                 <li>Thing 1</li>
                 <li>Another thing</li>
@@ -161,12 +144,14 @@
                 <li>Thingles</li>
             </div>
             <div class="col-sm-4">
+                    <hr style="border: 4px solid #137595" />
                 <h2>Have you heard</h2>
                 <p>There was a duck at a store.</p>
                 <p>He ate for free. I should have ordered him more expensive food!</p>
                 <p>The lesson here is DUCKS EAT FOR FREE at that restaurant.</p>
             </div>
             <div class="col-sm-4">
+                    <hr style="border: 4px solid #137595" />
                 <h2>Picture of some things</h2>
                 <div class="col-sm-6">
                     <img class="card-img-top" src="things.jpg" width="100%" height="100%" alt="Things">
