--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    
     <!-- above fonts are from my base, below fonts are ones they told me to use -->
     <link href="https://fonts.googleapis.com/css?family=Passion+One:400,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
@@ -60,53 +61,51 @@
     <!-- Container (Card Section) -->
     <div id="tour" class="bg-1">
         <div class="container">
-            <div class="container2">
-                <div class="container">
-                    <div class="row">
-                        <div class="card-deck">
-                            <div class="card col-lg-3">
-                                <img src="..." class="card-img-top" alt="..." />
-                                <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">
-                                        Some quick example text to build on the card title and make up
-                                        the bulk of the card's content.
-                                    </p>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                                </div>
+            <div class="container container2">
+                <div class="row">
+                    <div class="card-deck">
+                        <div class="card">
+                            <img src="cat.png" class="card-img-top" alt="cat" />
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">
+                                    Some quick example text to build on the card title and make up
+                                    the bulk of the card's content.
+                                </p>
+                                <a href="#" class="btn btn-primary card-btn">Go somewhere</a>
                             </div>
-                            <div class="card col-lg-3">
-                                <img src="..." class="card-img-top" alt="..." />
-                                <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">
-                                        Some quick example text to build on the card title and make up
-                                        the bulk of the card's content.
-                                    </p>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                                </div>
+                        </div>
+                        <div class="card">
+                            <img src="birds.png" class="card-img-top" alt="birds" />
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">
+                                    Some quick example text to build on the card title and make up
+                                    the bulk of the card's content.
+                                </p>
+                                <a href="#" class="btn btn-primary card-btn">Go somewhere</a>
                             </div>
-                            <div class="card col-lg-3">
-                                <img src="..." class="card-img-top" alt="..." />
-                                <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">
-                                        Some quick example text to build on the card title and make up
-                                        the bulk of the card's content.
-                                    </p>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                                </div>
+                        </div>
+                        <div class="card">
+                            <img src="cat.png" class="card-img-top" alt="cat" />
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">
+                                    Some quick example text to build on the card title and make up
+                                    the bulk of the card's content.
+                                </p>
+                                <a href="#" class="btn btn-primary card-btn">Go somewhere</a>
                             </div>
-                            <div class="card col-lg-3">
-                                <img src="..." class="card-img-top" alt="..." />
-                                <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">
-                                        Some quick example text to build on the card title and make up
-                                        the bulk of the card's content.
-                                    </p>
-                                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                                </div>
+                        </div>
+                        <div class="card">
+                            <img src="birds.png" class="card-img-top" alt="birds" />
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">
+                                    Some quick example text to build on the card title and make up
+                                    the bulk of the card's content.
+                                </p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
                     </div>
@@ -135,7 +134,7 @@
         <br>
         <div class="row">
             <div class="col-sm-4">
-                    <hr style="border: 4px solid #137595" />
+                <hr style="border: 4px solid #137595" />
                 <h2>List of things</h2>
                 <li>Thing 1</li>
                 <li>Another thing</li>
@@ -144,21 +143,23 @@
                 <li>Thingles</li>
             </div>
             <div class="col-sm-4">
-                    <hr style="border: 4px solid #137595" />
+                <hr style="border: 4px solid #137595" />
                 <h2>Have you heard</h2>
                 <p>There was a duck at a store.</p>
                 <p>He ate for free. I should have ordered him more expensive food!</p>
                 <p>The lesson here is DUCKS EAT FOR FREE at that restaurant.</p>
             </div>
             <div class="col-sm-4">
-                    <hr style="border: 4px solid #137595" />
+                <hr style="border: 4px solid #137595" />
                 <h2>Picture of some things</h2>
-                <div class="col-sm-6">
-                    <img class="card-img-top" src="things.jpg" width="100%" height="100%" alt="Things">
-                </div>
-                <div class="col-sm-6">
-                    <p>These guys are pretty coo’. Thing one and thing 2. You'll like what they do. Such fun from so
-                        few!</p>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <img class="card-img-top" src="things.jpg" width="100%" height="100%" alt="Things">
+                    </div>
+                    <div class="col-sm-6">
+                        <p>These guys are pretty coo’. Thing one and thing 2. You'll like what they do. Such fun from so
+                            few!</p>
+                    </div>
                 </div>
             </div>
         </div>
