hopefully cards are final

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    
+
     <!-- above fonts are from my base, below fonts are ones they told me to use -->
     <link href="https://fonts.googleapis.com/css?family=Passion+One:400,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
@@ -68,44 +68,50 @@
                             <img src="cat.png" class="card-img-top" alt="cat" />
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
-                                <p class="card-text">
-                                    Some quick example text to build on the card title and make up
-                                    the bulk of the card's content.
-                                </p>
-                                <a href="#" class="btn btn-primary card-btn">Go somewhere</a>
+                                <div class="card-content">
+                                    <p class="card-text">
+                                        Cats use thier whiskers to determine space between objects in the dark.
+                                    </p>
+                                    <a href="#" class="btn card-btn">Go somewhere</a>
+                                </div>
                             </div>
                         </div>
                         <div class="card">
                             <img src="birds.png" class="card-img-top" alt="birds" />
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
-                                <p class="card-text">
-                                    Some quick example text to build on the card title and make up
-                                    the bulk of the card's content.
-                                </p>
-                                <a href="#" class="btn btn-primary card-btn">Go somewhere</a>
+                                <div class="card-content">
+                                    <p class="card-text">
+                                        Some birds have membranes that cover their eyes like goggles, enabling them to
+                                        see while traveling at high speeds.
+                                    </p>
+                                    <a href="#" class="btn card-btn">Go somewhere</a>
+                                </div>
                             </div>
                         </div>
                         <div class="card">
                             <img src="cat.png" class="card-img-top" alt="cat" />
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
-                                <p class="card-text">
-                                    Some quick example text to build on the card title and make up
-                                    the bulk of the card's content.
-                                </p>
-                                <a href="#" class="btn btn-primary card-btn">Go somewhere</a>
+                                <div class="card-content">
+                                    <p class="card-text">
+                                        The cheetah is the only cat that can't retract its claws.
+                                    </p>
+                                    <a href="#" class="btn card-btn">Go somewhere</a>
+                                </div>
                             </div>
                         </div>
                         <div class="card">
                             <img src="birds.png" class="card-img-top" alt="birds" />
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
-                                <p class="card-text">
-                                    Some quick example text to build on the card title and make up
-                                    the bulk of the card's content.
-                                </p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <div class="card-content">
+                                    <p class="card-text">
+                                        Peregrine falcons can fly up to and sometimes surpassing 200mph as they hunt
+                                        prey.
+                                    </p>
+                                    <a href="#" class="btn card-btn">Go somewhere</a>
+                                </div>
                             </div>
                         </div>
                     </div>
