--- a/index.html
+++ b/index.html
@@ -139,32 +139,43 @@
         </p>
         <br>
         <div class="row">
-            <div class="col-sm-4">
-                <hr style="border: 4px solid #137595" />
-                <h2>List of things</h2>
-                <li>Thing 1</li>
-                <li>Another thing</li>
-                <li>THE thing</li>
-                <li>Thingamabob</li>
-                <li>Thingles</li>
-            </div>
-            <div class="col-sm-4">
-                <hr style="border: 4px solid #137595" />
-                <h2>Have you heard</h2>
-                <p>There was a duck at a store.</p>
-                <p>He ate for free. I should have ordered him more expensive food!</p>
-                <p>The lesson here is DUCKS EAT FOR FREE at that restaurant.</p>
-            </div>
-            <div class="col-sm-4">
-                <hr style="border: 4px solid #137595" />
-                <h2>Picture of some things</h2>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <img class="card-img-top" src="things.jpg" width="100%" height="100%" alt="Things">
-                    </div>
-                    <div class="col-sm-6">
-                        <p>These guys are pretty coo’. Thing one and thing 2. You'll like what they do. Such fun from so
-                            few!</p>
+
+            <div class="card-deck-left">
+                <div class="col-12 col-md-4">
+                    <hr style="border: 4px solid #137595" />
+                    <h2>List of things</h2>
+                    <li>Thing 1</li>
+                    <li>Another thing</li>
+                    <li>THE thing</li>
+                    <li>Thingamabob</li>
+                    <li>Thingles</li>
+                </div>
+
+                <div class="col-12 col-md-4">
+                    <hr style="border: 4px solid #137595" />
+                    <h2>Have you heard</h2>
+                    <p>There was a duck at a store.</p>
+                    <p>He ate for free. I should have ordered him more expensive food!</p>
+                    <p>The lesson here is DUCKS EAT FOR FREE at that restaurant.</p>
+                </div>
+
+                <div class="col-12 col-md-4">
+
+                    <hr style="border: 4px solid #137595" />
+                    <h2>Picture of some things</h2>
+                    
+                            <div class="flexbox">
+                                <p>These guys are pretty coo’. Thing one and thing 2. You'll like what they do. Such fun
+                                    from so
+                                    few!</p>
+                            </div>
+                            <div class="col-12 col-md-4">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <img class="card-img-top" src="things.jpg" style="width:6em; height:6em;"  alt="Things">
+                            </div>
+                            <br>
+                        </div>
                     </div>
                 </div>
             </div>
